[package]
name = "mdbook-mark"
version = "0.1.0"
authors = ["blazh <blazh@163.com>"]
edition = "2018"
keywords = ["mdbook", "gitbook", "rustbook", "markdown", "mark"]
readme = "README.md"
repository = "https://github.com/blazood/mdbook-mark"
description = "this is a mdbook preprocessor which can render ==== to <mark></mark>"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
mdbook="0.4.7"
clap = "2.24"
env_logger = "0.7.1"
lazy_static = "1.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.4.3"